nginx/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nginx-test
  labels:
    network: allow-global

spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-test
  template:
    metadata:
      labels:
        app: nginx-test
    spec:
      containers:
        - name: nginx-test
          image: nginx
          ports:
            - containerPort: 80
