nginx/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: nginx-test

spec:
  rules:
    - host: nginx.kube.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-test
                port:
                  number: 80
